--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --host",
+		"dev:silent": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"test": "playwright test",
