--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
 		"vite": "^4.2.0",
 		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"sass": "^1.62.1"
+	}
 }
