chore(ide): add words to cspell

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,16 @@
 {
-	"cSpell.words": ["Hakkımızda", "İletişim", "Müşavirlik", "Özkan", "Sayfa", "Yazılar"]
+	"cSpell.words": [
+		"Doğruluk",
+		"dürüstlük",
+		"gizlilik",
+		"Hakkımızda",
+		"İletişim",
+		"ilkeleriyle",
+		"Müşavirlik",
+		"Özkan",
+		"Sayfa",
+		"tarafsızlık",
+		"uluslararası",
+		"Yazılar"
+	]
 }
