--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"sass": "^1.62.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"swiper": "^8.4.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0",
