--- a/sanity/package.json
+++ b/sanity/package.json
@@ -16,10 +16,12 @@
   ],
   "dependencies": {
     "@sanity/vision": "^3.12.1",
+    "easymde": "^2.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "sanity": "^3.14.3",
+    "sanity-plugin-markdown": "^4.1.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
