--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
 		"vite": "^4.2.0",
 		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sanity/client": "^6.1.7"
+	}
 }
