--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,6 +34,9 @@ jobs:
       - name: 📥 Install dependencies
         run: npm ci
 
+      - name: 📥 Install Sanity dependencies
+        run: cd sanity && npm ci
+
       - name: Pretty
         run: npm run format
 
