--- a/package.json
+++ b/package.json
@@ -36,8 +36,5 @@
 		"vite": "^4.2.0",
 		"vitest": "^0.25.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"@sanity/client": "^6.1.7"
-	}
+	"type": "module"
 }
