--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"devDependencies": {
 		"@iconify/svelte": "^3.1.3",
 		"@playwright/test": "^1.28.1",
+		"@sanity/client": "^6.1.7",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -36,8 +37,5 @@
 		"vite": "^4.2.0",
 		"vitest": "^0.25.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"@sanity/client": "^6.1.7"
-	}
+	"type": "module"
 }
