chore: add words to cSpell vscode extension

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,27 @@
 {
 	"cSpell.words": [
+		"Başlık",
 		"Doğruluk",
 		"dürüstlük",
 		"gizlilik",
+		"Görsel",
 		"Hakkımızda",
+		"hotspot",
 		"İletişim",
 		"ilkeleriyle",
+		"Kategoriler",
+		"Missyonumuz",
+		"Misyonumuz",
 		"Müşavirlik",
+		"Özet",
 		"Özkan",
+		"Paragraf",
+		"Paragrafı",
 		"Sayfa",
 		"tarafsızlık",
 		"uluslararası",
+		"Vizyonumuz",
+		"Yazı",
 		"Yazılar"
 	]
 }
