--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -67,7 +67,7 @@ jobs:
         id: version
         with:
           release-type: node
-          prerelease: true
+          prerelease: false
           # use 0.x.x for pre-major releases:
           bump-minor-pre-major: true
           bump-patch-for-minor-pre-major: true
